# rpc

./: .gitignore  WBCtime.txt  computation_time.txt  erase.py  stepSimtime.txt  timesteps.txt  timesteps_2.txt  timesteps_3.txt
config/draco/: alip_command.ini  pnc.yaml  pybullet_simulation.py
controller/: control_architecture.hpp  state_machine.hpp
controller/draco_controller/: CMakeLists.txt  draco_control_architecture.cpp  draco_control_architecture.hpp  draco_controller.cpp  draco_interface.cpp  draco_interface.hpp  draco_interrupt_handler.cpp  draco_state_estimator.cpp  draco_state_estimator.hpp  draco_state_provider.cpp  draco_state_provider.hpp  draco_tci_container.cpp
controller/robot_system/: pinocchio_robot_system.cpp
controller/whole_body_controller/: CMakeLists.txt
planner/locomotion/alip_mpc/: CMakeLists.txt  CMakeListsV0.txt
planner/locomotion/alip_mpc/include/: NewStep_mpc.hpp
planner/locomotion/alip_mpc/src/: NewStep_mpc.cpp  main.cpp
planner/locomotion/alip_mpc/src/codegen_alip_mpc/: generate_mpc_fp_controller.m
planner/locomotion/alip_mpc/src/codegen_alip_mpc/utils/: README.txt  formulate_alip_mpc_fp_opt.asv  formulate_alip_mpc_fp_opt.m  formulate_alip_mpc_fp_opt_new_imp.m  formulate_draco_alip_mpc_fp_opt.m
planner/locomotion/alip_mpc/test/: CMakeLists.txt  test_mpc_dyn.cpp
robot_model/ground/: tilted_plane.urdf  tilted_plane_10_degree.urdf
simulator/pybullet/: draco_main.py
test/: CMakeLists.txt
test/alip/: Alip2Swing_trajectory.txt  AlipSwing_trajectory.txt  CMakeLists.txt  (+21 more)
util/: interpolation.cpp  interpolation.hpp
(+159 files in other folders)
